--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sanity": "^4.20.3",
+    "sanity-plugin-mux-input": "^2.12.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
   },
